MDEV-8696: Adding indexes on empty table is slow with large innodb_sort_buffer_size.

Analysis: Current implementation will write and read at least one block
(sort_buffer_size bytes) from disk / index even if that block does not
contain any records.

Fix: Avoid writing / reading empty blocks to temporary files (disk).